<resources>
    <string name="app_name">DesafioWecancer</string>
    <string name="type_email">Email</string>
    <string name="type_password">Senha</string>
    <string name="type_name">Nome</string>
    <string name="type_surname">Sobrenome</string>
    <string name="type_adress">Endereço</string>
    <string name="type_zipCode">CEP</string>
    <string name="add_favorite_movie">Adicione um filme favorito a lista!</string>
    <string name="movie_name">Título do filme</string>
    <string name="movie_empty">Digite o título do filme</string>
    <string name="movie_sent">Filme favorito enviado</string>
    <string name="error_movie_sent">Erro ao enviar filme favorito</string>
    <string name="save_button">Salvar</string>
    <string name="user_data">Meus dados</string>
    <string name="logout">Sair</string>
    <string name="welcome_message">Seja bem vindo(a) ao DesafioWecancer</string>
    <string name="server_error">Erro no servidor</string>
    <string name="delete_confirmation_message">Deseja mesmo deletar seu filme favorito da lista?</string>
    <string name="confirmation">Deletar filme favorito</string>
    <string name="delete">Deletar</string>
    <string name="movie_deleted">O filme foi removido da lista</string>
    <string name="movie_delete_error">Ocorreu um erro ao remover o filme da lista</string>
    <string name="login_button">Entrar</string>
    <string name="send_movie_button">Enviar</string>
    <string name="password_forgot">Esqueci minha senha.</string>
    <string name="confirm_your_password">Confirme sua senha</string>
    <string name="register_button">Registrar</string>
    <string name="loading">Carregando</string>
    <string name="email_password_reset_empty">Insira seu email </string>
    <string name="favorite_movies_list">Meus filmes favoritos </string>
    <string name="user_data_updated_error">Erro ao atualizar os dados</string>
    <string name="go_login">Já possui conta? Entre!</string>
    <string name="change_password">Alterar senha</string>
    <string name="change_password_message">Uma mensagem de redefinição de senha foi enviada para o email cadastrado.</string>
    <string name="change_password_error_message">Erro ao enviar email de alteração de senha.</string>
    <string name="change_email_message">Uma mensagem de redefinição de email foi enviada para o email cadastrado.</string>
    <string name="register">Não possui conta? Registre-se!</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="change_password_confirmation">Uma mensagem de redefinição de senha será enviada para o email cadastrado. Deseja prosseguir?</string>
    <string name="zipcode_format">Cep em formato incorreto.</string>
    <string name="unindentified_error">Ocorreu um erro não identificado. Tente novamente.</string>
    <string name="email_password_empty">Preencha todos os campos</string>
    <string name="different_password">As senhas não são idênticas</string>
    <string name="ERROR_INVALID_EMAIL">Email em formato incorreto</string>
    <string name="sensitive_operation_error">Você deve fazer um novo login para proceder com essa operação.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Este email já está sendo utilizado em outra conta</string>
    <string name="ERROR_WEAK_PASSWORD">A senha deve conter mais de 6 caracteres</string>
    <string name="ERROR_USER_NOT_FOUND">Email não cadastrado</string>
    <string name="ERROR_WRONG_PASSWORD">Senha incorreta</string>
    <string name="ERROR_REGISTER_ACCOUNT">Erro ao criar o usuário. Tente novamente.</string>
    <string name="user_data_updated">Dados atualizados.</string>
    <string name="movie_alredy_exists">Esse filme já foi adicionado anteriormente</string>

</resources>
