<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="rodrigotaborda.desafiowecancer.Fragmentos.RegistroFragment"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/layoutCadastrar"
        android:layout_alignParentTop="true">


        <EditText
            android:id="@+id/editTextNomeCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:inputType="textCapWords"
            android:hint="@string/type_name"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextSobrenomeCadastrar" />

        <EditText
            android:id="@+id/editTextSobrenomeCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:inputType="textCapWords"
            android:hint="@string/type_surname"
            android:layout_below="@id/editTextNomeCadastrar"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextEnderecoCadastrar"
            />

        <EditText
            android:id="@+id/editTextEnderecoCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:inputType="textCapWords"
            android:hint="@string/type_adress"
            android:layout_below="@id/editTextSobrenomeCadastrar"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextCepCadastrar"/>

        <EditText
            android:id="@+id/editTextCepCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:inputType="number"
            android:hint="@string/type_zipCode"
            android:layout_below="@id/editTextEnderecoCadastrar"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextEmailCadastrar"/>

        <EditText
            android:id="@+id/editTextEmailCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:inputType="textEmailAddress"
            android:hint="@string/type_email"
            android:layout_below="@id/editTextCepCadastrar"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextSenhaCadastrar"/>

        <EditText
            android:id="@+id/editTextSenhaCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/type_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:background="@drawable/edittext_white_background"
            android:layout_below="@id/editTextEmailCadastrar"
            android:padding="16dp"
            android:fontFamily="sans-serif"
            android:layout_margin="5dp"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextConfirmarSenha"/>

        <EditText
            android:id="@+id/editTextConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:background="@drawable/edittext_white_background"
            android:layout_below="@id/editTextSenhaCadastrar"
            android:padding="16dp"
            android:fontFamily="sans-serif"
            android:layout_margin="5dp"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:text="@string/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:layout_below="@+id/editTextConfirmarSenha"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_margin="5dp" />


    </RelativeLayout>


    <FrameLayout
        android:id="@+id/layoutCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">

        <View
            android:id="@+id/thirdivider"
            android:layout_height="1dp"
            android:layout_width="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginBottom="40dp"
            />

        <TextView
            android:id="@+id/textViewLogar"
            android:text="@string/go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="20sp"

            />


    </FrameLayout>

</RelativeLayout>
