<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="rodrigotaborda.desafiowecancer.Fragmentos.LoginFragment"
    android:clickable="true">


    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center">


        <EditText
            android:id="@+id/editTextEmailLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_background"
            android:hint="@string/type_email"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:fontFamily="sans-serif"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextSenhaLogar" />

        <EditText
            android:id="@+id/editTextSenhaLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/type_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:background="@drawable/edittext_white_background"
            android:layout_below="@id/editTextEmailLogar"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:imeOptions="actionDone"/>



        <Button
            android:id="@+id/botaoEntrar"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:layout_below="@+id/editTextSenhaLogar"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textViewEsqueciSenha"
            android:text="@string/password_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botaoEntrar"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"/>


    </RelativeLayout>




    <FrameLayout
        android:id="@+id/layoutCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">

        <View
            android:id="@+id/thirdivider"
            android:layout_height="1dp"
            android:layout_width="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginBottom="40dp" />

        <TextView
            android:id="@+id/textViewCadastrar"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_gravity="center" />

    </FrameLayout>



</RelativeLayout>




