<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rodrigotaborda.desafiowecancer.Fragmentos.PerfilFragment"
    android:background="@color/colorBackground"
    android:clickable="true">

    <TextView
        android:id="@+id/textViewMeusDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:text="@string/user_data"/>


    <ImageButton
        android:id="@+id/buttonEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackground"
        android:src="@drawable/ic_action_edit"/>

    <EditText
        android:id="@+id/editTextNomeAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_below="@id/textViewMeusDados"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextSobrenomeAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/editTextNomeAlterar"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextEnderecoAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:layout_below="@id/editTextSobrenomeAlterar"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextCepAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/editTextEnderecoAlterar"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextEmailAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/editTextCepAlterar"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:imeOptions="actionDone"/>



    <Button
        android:id="@+id/textViewAlterarSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_below="@id/editTextEmailAlterar"
        android:text="@string/change_password"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorText"/>


    <LinearLayout
        android:id="@+id/laytbtns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/editTextEmailAlterar" >

        <Button
            android:id="@+id/buttonCancelar"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />


        <Button
            android:id="@+id/buttonSalvar"
            android:text="@string/save_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>





</RelativeLayout>
